--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -4,6 +4,8 @@ git+https://github.com/django-nonrel/django-permission-backend-nonrel
 git+https://github.com/django-nonrel/mongodb-engine.git
 git+https://github.com/django-nonrel/mongodb-cache.git
 git+https://github.com/django-nonrel/nonrel-search.git
+django-uuidfield==0.4.0
 MySQL-python==1.2.4
 pymongo==2.6
+South==0.8.2
 wsgiref==0.1.2
