--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -8,6 +8,7 @@ Markdown==2.3.1
 MySQL-python==1.2.4
 South==0.8.2
 django-filter==0.7
+django-group-access==1.1.15
 django-uuidfield==0.4.0
 djangorestframework==2.3.7
 pymongo==2.6
