--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -1,9 +1,6 @@
-git+https://github.com/django-nonrel/django-nonrel.git
-git+https://github.com/django-nonrel/django-dbindexer.git
-git+https://github.com/django-nonrel/django-permission-backend-nonrel
-git+https://github.com/django-nonrel/mongodb-engine.git
-git+https://github.com/django-nonrel/mongodb-cache.git
-git+https://github.com/django-nonrel/nonrel-search.git
+git+https://github.com/django-nonrel/django@nonrel-1.3
+git+https://github.com/django-nonrel/djangotoolbox@toolbox-1.3
+git+https://github.com/django-nonrel/mongodb-engine@mongodb-engine-1.3
 Markdown==2.3.1
 MySQL-python==1.2.4
 South==0.8.2
