Be sure to pass authentication headers

--- a/django-nonrel/ocl/apache/wsgi.conf
+++ b/django-nonrel/ocl/apache/wsgi.conf
@@ -19,3 +19,6 @@ WSGIScriptAlias /v1 /opt/deploy/django/ocl/apache/django.wsgi
 Order allow,deny
 Allow from all
 </Directory>
+
+WSGIPassAuthorization On
+
