#56: Remove v1 from the URL path

--- a/django-nonrel/ocl/apache/wsgi.conf
+++ b/django-nonrel/ocl/apache/wsgi.conf
@@ -15,7 +15,7 @@ Order deny,allow
 Allow from all
 </Directory>
 
-WSGIScriptAlias /v1 /opt/deploy/django/ocl/apache/django.wsgi
+WSGIScriptAlias / /opt/deploy/django/ocl/apache/django.wsgi
 
 <Directory /opt/deploy/django/ocl/apache/django.wsgi>
 Order allow,deny
