--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -3,7 +3,7 @@ git+https://github.com/django-nonrel/djangotoolbox
 git+https://github.com/django-nonrel/mongodb-engine
 boto==2.38.0
 celery==3.1.17
-django-celery==3.0.11
+# django-celery==3.0.11
 django-haystack==2.1.0
 django-uuidfield==0.4.0
 djangorestframework==2.3.7
