--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - ../../solr/:/opt/solr/server/solr/
+      - /Users/bhawnasingla/IdeaProjects/ocl/oclapi/solr/:/opt/solr/server/solr/
   ocl:
     build:
       context: .
