--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - mongo
       - solr
     links:
-      - "mongo:api.dev.openconceptlab.org"
-      - "solr:solr.dev.openconceptlab.org"
+      - "mongo:mongo.openconceptlab.org"
+      - "solr:solr.openconceptlab.org"
     ports:
       - "8000:8000"
     volumes:
