2721 | switching to postgres for celery

--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     links:
       - "mongo:mongo.openconceptlab.org"
       - "solr:solr.openconceptlab.org"
+    extra_hosts:
+      - "postgres.openconceptlab.org:172.18.0.1"
     ports:
       - "8000:8000"
     volumes:
