2721 | Add redis to showcase

--- a/django-nonrel/ocl/docker-compose.showcase.yml
+++ b/django-nonrel/ocl/docker-compose.showcase.yml
@@ -3,8 +3,9 @@ services:
   mongo:
     container_name: ocl_mongo
     image: mongo
-    ports:
-      - "27017:27017"
+  redis:
+    container_name: ocl_redis
+    image: redis
   solr:
     build:
       context: ../../
@@ -23,6 +24,7 @@ services:
       - solr
     links:
       - "mongo:mongo.openconceptlab.org"
+      - "redis:redis.openconceptlab.org"
       - "solr:solr.openconceptlab.org"
     ports:
       - "8000:8000"
@@ -39,6 +41,7 @@ services:
       - solr
     links:
       - "mongo:mongo.openconceptlab.org"
+      - "redis:redis.openconceptlab.org"
       - "solr:solr.openconceptlab.org"
     volumes:
       - .:/code
