--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -4,6 +4,7 @@ git+https://github.com/django-nonrel/mongodb-engine
 boto==2.38.0
 celery[redis]==3.1.17
 celery_once==0.1.4
+flower
 # django-celery==3.0.11
 django-configurations==0.8
 django-haystack==2.1.0
