Added dependency for redis in docker compose

--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     depends_on:
       - mongo
       - solr
+      - redis
     links:
       - "mongo:mongo.openconceptlab.org"
       - "redis:redis.openconceptlab.org"
