--- a/django-nonrel/ocl/docker-compose.dev.yml
+++ b/django-nonrel/ocl/docker-compose.dev.yml
@@ -8,6 +8,28 @@ services:
     extends:
       file: docker-compose.yml
       service: solr
+  redis:
+    extends:
+      file: docker-compose.yml
+      service: redis
+  ocl_worker:
+    container_name: ocl_worker
+    extends:
+      file: docker-common.yml
+      service: ocl
+    command: bash run_celery.sh ${AWS_ACCESS_KEY_ID} ${AWS_SECRET_ACCESS_KEY} ${AWS_STORAGE_BUCKET_NAME}
+    depends_on:
+      - mongo
+      - solr
+      - redis
+    links:
+      - "mongo:mongo.openconceptlab.org"
+      - "redis:redis.openconceptlab.org"
+      - "solr:solr.openconceptlab.org"
+    volumes:
+      - .:/code
+    environment:
+      - C_FORCE_ROOT=1
   #service with 'links' can't be extended like mongo or solr
   ocl_dev:
     build:
@@ -17,9 +39,11 @@ services:
     depends_on:
       - mongo
       - solr
+      - redis
     links:
       - "mongo:mongo.openconceptlab.org"
       - "solr:solr.openconceptlab.org"
+      - "redis:redis.openconceptlab.org"
     ports:
       #ports for debugging
       - "8001:8001"
