Revert "Added volume to retain data and Fixed mongodb version to 3.2.11"
This reverts commit 9e06abf9f47a650f79bbbd2ef85fd81d8c57d46f.

--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -2,9 +2,7 @@ version: '2'
 services:
   mongo:
     container_name: ocl_mongo
-    image: mongo:3.2.11
-    volumes:
-      - ./data:/data/db
+    image: mongo
     ports:
       - "27017:27017"
   redis:
