#0 add newrelic monitoring to oclapi container, activated if environment has NEW_RELIC_API_KEY environment variable

--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -40,6 +40,8 @@ services:
       - "8000:8000"
     volumes:
       - .:/code
+    environment:
+      - NEW_RELIC_API_KEY=$NEW_RELIC_API_KEY
   ocl_worker:
     container_name: ocl_worker
     extends:
