--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ${DATA_ROOT-.}/data/ocl/solr:/opt/solr/server/solr/collection1/data
   ocl_api:
     container_name: ocl_api
+    hostname: ${CONFIG}
     extends:
       file: docker-common.yml
       service: ocl
