--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     volumes:
       - .:/code
     environment:
-      - NEW_RELIC_API_KEY=$NEW_RELIC_API_KEY
+      - NEW_RELIC_API_KEY=${NEW_RELIC_API_KEY}
   ocl_worker:
     container_name: ocl_worker
     extends:
