--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -78,3 +78,8 @@ services:
       - .:/code
     environment:
       - C_FORCE_ROOT=1
+networks:
+  default:
+    ipam:
+      config:
+        - subnet: 172.18.0.0/16
