--- a/django-nonrel/ocl/Dockerfile
+++ b/django-nonrel/ocl/Dockerfile
@@ -4,3 +4,7 @@ RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
 RUN pip install -r requirements.txt
+RUN echo deb http://apt.newrelic.com/debian/ newrelic non-free >> /etc/apt/sources.list.d/newrelic.list && \
+    wget -O- https://download.newrelic.com/548C16BF.gpg | apt-key add - && \
+    apt-get update  && \
+    apt-get install newrelic-sysmond
