--- a/django-nonrel/ocl/requirements.txt
+++ b/django-nonrel/ocl/requirements.txt
@@ -1,6 +1,5 @@
 git+https://github.com/django-nonrel/django@nonrel-1.5
-git+https://github.com/django-nonrel/djangotoolbox
-git+https://github.com/django-nonrel/mongodb-engine
+django-mongodb-engine
 git+https://github.com/snyaggarwal/django-queryset-csv
 boto==2.38.0
 celery[redis]==3.1.17
