OpenConceptLab/DATIM-Metadata-Project#37 Restart on failure

--- a/django-nonrel/ocl/docker-compose.yml
+++ b/django-nonrel/ocl/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - .:/code
     environment:
       - NEW_RELIC_API_KEY=${NEW_RELIC_API_KEY}
+    restart: on-failure
   ocl_worker:
     container_name: ocl_worker
     extends:
