--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     environment:
       - ENVIRONMENT=production
       - ROOT_PASSWORD=Root123
+      - OCL_API_TOKEN=891b4b17feab99f3ff7e5b5d04ccc5da7aa96da6
       - NEW_RELIC_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
