--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2.1'
 services:
   mongo:
-    image: mongo:3.2
+    image: mongo:3.5.11
     volumes:
       - mongo_data:/data/db
     restart: always
     healthcheck:
       test: "exit 0"
   redis:
-    image: redis:3.2
+    image: redis:3.2.10
     restart: always
     healthcheck:
       test: "exit 0"
@@ -33,6 +33,7 @@ services:
       - "8000:8000"
     environment:
       - ENVIRONMENT=production
+      - WAIT_FOR="mongo.openconceptlab.org:27017 redis.openconceptlab.org:6379 solr.openconceptlab.org:8983"
       - ROOT_PASSWORD=Root123
       - OCL_API_TOKEN=891b4b17feab99f3ff7e5b5d04ccc5da7aa96da6
       - NEW_RELIC_API_KEY
