Fixing permissions and adding pycharms

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -24,6 +24,7 @@ services:
       - "2000:22"
     volumes:
       - ./ocl:/code
+      - ./ocl/.pycharm_helpers:/root/.pycharm_helpers
     environment:
       - ENVIRONMENT=local
       - SSH=true
