--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,10 +32,10 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ENVIRONMENT=production
       - WAIT_FOR="mongo.openconceptlab.org:27017 redis.openconceptlab.org:6379 solr.openconceptlab.org:8983"
-      - ROOT_PASSWORD=Root123
-      - OCL_API_TOKEN=891b4b17feab99f3ff7e5b5d04ccc5da7aa96da6
+      - ENVIRONMENT=${ENVIRONMENT-production}
+      - ROOT_PASSWORD=${ROOT_PASSWORD-Root123}
+      - OCL_API_TOKEN=${OCL_API_TOKEN-891b4b17feab99f3ff7e5b5d04ccc5da7aa96da6}
       - NEW_RELIC_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
