Add SECRET_KEY and EMAIL config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - ENVIRONMENT=${ENVIRONMENT-production}
       - ROOT_PASSWORD=${ROOT_PASSWORD-Root123}
       - OCL_API_TOKEN=${OCL_API_TOKEN-891b4b17feab99f3ff7e5b5d04ccc5da7aa96da6}
+      - SECRET_KEY=${SECRET_KEY-s3owRP0sLI2opDDI6qIgG3iD57}
+      - EMAIL_HOST_PASSWORD
       - NEW_RELIC_API_KEY
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
