DATIM-Metadata-Project#130 Expose flower on all envs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,8 @@ services:
   flower:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     command: bash run_flower.sh
+    ports:
+      - "5555:5555"
     depends_on:
       - celery
     links:
@@ -75,6 +77,7 @@ services:
     environment:
       - C_FORCE_ROOT=1
       - SECRET_KEY
+      - ROOT_PASSWORD=${ROOT_PASSWORD-Root123}
     restart: always
     healthcheck:
       test: "exit 0"
