--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -30,6 +30,7 @@ services:
       - ./ocl/.pycharm_helpers:/root/.pycharm_helpers
     environment:
       - SSH=true
+      - ENVIRONMENT=local
     restart: "no"
   celery:
     image: openconceptlab/oclapi:dev
