OpenConceptLab/ocl_issues#78 Create admin user with demo data in oclapi

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,6 +31,7 @@ services:
     environment:
       - SSH=true
       - ENVIRONMENT=local
+      - IMPORT_DEMO_DATA=true
     restart: "no"
   celery:
     image: openconceptlab/oclapi:dev
