--- a/ocl/requirements.txt
+++ b/ocl/requirements.txt
@@ -3,6 +3,7 @@ django-mongodb-engine
 git+https://github.com/snyaggarwal/django-queryset-csv
 boto==2.38.0
 celery[redis]==3.1.17
+redis==2.10.6
 celery_once==0.1.4
 flower
 # django-celery==3.0.11
