Fix IMPORT_DEMO_DATA env for dev

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,7 +31,7 @@ services:
     environment:
       - SSH=true
       - ENVIRONMENT=local
-      - IMPORT_DEMO_DATA=true
+      - IMPORT_DEMO_DATA=${IMPORT_DEMO_DATA-true}
     restart: "no"
   celery:
     image: openconceptlab/oclapi:dev
