Adding link to api from celery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,6 @@ services:
       - mongo
       - solr
       - redis
-      - celery
     links:
       - "mongo:mongo.openconceptlab.org"
       - "redis:redis.openconceptlab.org"
@@ -57,6 +56,7 @@ services:
       - "mongo:mongo.openconceptlab.org"
       - "redis:redis.openconceptlab.org"
       - "solr:solr.openconceptlab.org"
+      - "api:api.openconceptlab.org"
     environment:
       - C_FORCE_ROOT=1
       - SECRET_KEY
