--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     healthcheck:
       test: "exit 0"
   backup:
-    image: openmrs/cron-backup
+    image: openmrs/cron-backup:1.0.0
     volumes:
       - mongo_data:/mongo_data
       - solr_data:/solr_data
