OpenConceptLab/ocl_issues#106 Adding wait_for_url and cachebust

--- a/integration-tests/Dockerfile
+++ b/integration-tests/Dockerfile
@@ -6,9 +6,14 @@ WORKDIR /code
 COPY package.json package-lock.json ./
 RUN npm install
 
+RUN apk add --no-cache curl
+
 COPY . .
 
 ARG url=http://localhost:8000/
 ARG adminUser=root
 ARG adminPassword=Root123
-RUN npm t --url=$url --adminUser=$adminUser --adminPassword=$adminPassword
+ARG endpoint="admin/authtoken/token/"
+
+ARG CACHEBUST=1
+RUN ./wait_for_url.sh $url$endpoint && npm t --url=$url --adminUser=$adminUser --adminPassword=$adminPassword
