OpenConceptLab/ocl_issues#106 Adding list orgs tests and fixes

--- a/ocl/Dockerfile-dev
+++ b/ocl/Dockerfile-dev
@@ -6,7 +6,6 @@ RUN apt-get install -y openssh-server
 RUN apt-get install -y sudo
 RUN mkdir /var/run/sshd
 RUN echo 'root:Root123' | chpasswd
-RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 
 # SSH login fix. Otherwise user is kicked off after login
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
@@ -14,11 +13,9 @@ RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so
 # ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
 
-# fix for pycharm debug ssh connection
-RUN echo "KexAlgorithms=diffie-hellman-group1-sha1" >> /etc/ssh/sshd_config
-
-# Allows sshd to read /root/.ssh/environment
-RUN echo "PermitUserEnvironment=yes" >> /etc/ssh/sshd_config
+RUN echo "PermitUserEnvironment yes" >> /etc/ssh/sshd_config
+RUN echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
+RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
 
 EXPOSE 22
 
