--- a/ocl/requirements.txt
+++ b/ocl/requirements.txt
@@ -20,5 +20,6 @@ gunicorn==18.0
 moto==0.4.25
 django-cors-headers==1.1.0
 ocldev==0.1.16
+fhir.resources==5.0.1
 mock
 raven #used to push logs to sentry.io/openconceptlab
