--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
       - AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY
       - AWS_STORAGE_BUCKET_NAME
+      - FLOWER_USER=${FLOWER_USER-floweruser}
+      - FLOWER_PWD=${FLOWER_PWD-Flower123}
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/admin/authtoken/token/"]
@@ -105,7 +107,7 @@ services:
       test: "exit 0"
   flower:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
-    command: celery -A tasks flower --basic_auth=root:${ROOT_PASSWORD-Root123} --conf=flowerconfig.py
+    command: celery -A tasks flower --basic_auth=${FLOWER_USER-floweruser}:${FLOWER_PWD-Flower123} --conf=flowerconfig.py
     ports:
       - "5555:5555"
     depends_on:
