--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,21 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   redis:
     image: redis:3.2.10
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   solr:
     image: openconceptlab/oclsolr:${ENVIRONMENT-production}
     volumes:
@@ -19,6 +29,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   api:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     depends_on:
@@ -51,6 +66,11 @@ services:
       interval: 1m30s
       timeout: 10s
       retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   celery:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     command: celery -A tasks worker -l INFO -n default --autoscale=15,3
@@ -69,6 +89,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   celery_bulk_import:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     command: celery -A tasks worker -l INFO -Q bulk_import -n bulk_import --autoscale=3,1
@@ -87,6 +112,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   celery_bulk_priority_import:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     command: celery -A tasks worker -l INFO -Q bulk_priority_import -n bulk_priority_import --autoscale=3,1
@@ -105,6 +135,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   flower:
     image: openconceptlab/oclapi:${ENVIRONMENT-production}
     command: celery -A tasks flower --basic_auth=${FLOWER_USER-floweruser}:${FLOWER_PWD-Flower123} --conf=flowerconfig.py
@@ -120,6 +155,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
   backup:
     image: openmrs/cron-backup:1.0.0
     volumes:
@@ -132,6 +172,11 @@ services:
     restart: always
     healthcheck:
       test: "exit 0"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10M"
+        max-file: "10"
 volumes:
   mongo_data:
   solr_data:
