--- a/ocl/requirements.txt
+++ b/ocl/requirements.txt
@@ -5,6 +5,10 @@ boto==2.38.0
 celery[redis]==3.1.17
 redis==2.10.6
 celery_once==0.1.4
+celery-haystack==0.8
+django-transaction-hooks
+django-appconf==1.0.3
+django-celery-transactions==0.1.3
 flower
 # django-celery==3.0.11
 django-configurations==0.8
