--- a/ocl/requirements.txt
+++ b/ocl/requirements.txt
@@ -5,7 +5,7 @@ boto==2.38.0
 celery[redis]==3.1.17
 redis==2.10.6
 celery_once==0.1.4
-flower
+flower==0.9.5
 # django-celery==3.0.11
 django-configurations==0.8
 django-haystack==2.1.0
