--- a/ocl/requirements.txt
+++ b/ocl/requirements.txt
@@ -1,10 +1,7 @@
-git+https://github.com/django-nonrel/django@nonrel-1.5
-django-mongodb-engine
-git+https://github.com/snyaggarwal/django-queryset-csv
 boto==2.38.0
-celery[redis]==3.1.17
+celery==3.1.17
 redis==2.10.6
-celery_once==0.1.4
+celery-once==0.1.4
 flower==0.9.5
 # django-celery==3.0.11
 django-configurations==0.8
@@ -21,5 +18,55 @@ moto==0.4.25
 django-cors-headers==1.1.0
 ocldev==0.1.73
 fhir.resources==5.0.1
-mock
-raven #used to push logs to sentry.io/openconceptlab
+mock==3.0.5
+raven==6.10.0
+## The following requirements were added by pip freeze:
+amqp==1.4.9
+anyjson==0.3.3
+attrs==20.3.0
+backports-abc==0.5
+bcrypt==3.1.7
+billiard==3.3.0.23
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+configparser==4.0.2
+contextlib2==0.6.0.post1
+cryptography==3.3.1
+Django==1.5.11
+django-queryset-csv==0.3.3
+djangotoolbox==1.8.0
+enum34==1.1.10
+Flask==1.1.2
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.3.0
+httpretty==0.8.10
+humanize==1.0.0
+idna==2.10
+importlib-metadata==2.1.1
+ipaddress==1.0.23
+isodate==0.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+kombu==3.0.37
+MarkupSafe==1.1.1
+paramiko==2.7.2
+pathlib2==2.3.5
+prometheus-client==0.8.0
+pycparser==2.20
+PyNaCl==1.4.0
+pyrsistent==0.16.1
+pytz==2021.1
+requests==2.25.1
+scandir==1.10.0
+singledispatch==3.4.0.3
+six==1.15.0
+tornado==5.1.1
+urllib3==1.26.3
+virtualenv==16.7.6
+Werkzeug==1.0.1
+xmltodict==0.12.0
+zipp==1.2.0
